<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:elevation="4dp"
        app:titleTextColor="@color/white"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        <ImageView
            android:id="@+id/tv_header_title"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:paddingTop="5dp"
            android:layout_gravity="center"
            android:src="@drawable/logo_header" />
    </android.support.v7.widget.Toolbar>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="15dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/actions"
            android:textColor="@color/black"
            android:textSize="25dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="0dp"
            android:background="@color/colorPrimary" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/lightGrey"
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="10dp">
        <LinearLayout
            android:id="@+id/ll_service_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightGrey"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:onClick="nextPage"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                >

                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/btn_round_border"
                    android:src="@mipmap/round_attach_money_white_18"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/my_amount"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="15dp"
                    android:textSize="15dp" />
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/round_arrow_forward_ios_24"
                    android:layout_marginTop="10dp"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/softGrey" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_service_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightGrey"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:onClick="nextPage"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                >
                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/btn_round_border"
                    android:src="@mipmap/round_receipt_white_18"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pay"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="15dp"
                    android:textSize="15dp" />
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/round_arrow_forward_ios_24"
                    android:layout_marginTop="10dp"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/softGrey" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_service_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightGrey"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:onClick="nextPage"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                >

                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/btn_round_border"
                    android:src="@mipmap/round_check_white_18"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/activate"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="15dp"
                    android:textSize="15dp" />
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/round_arrow_forward_ios_24"
                    android:layout_marginTop="10dp"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/softGrey" />

        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_service_4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/lightGrey"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:onClick="nextPage"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                >
                <ImageButton
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:background="@drawable/btn_round_border"
                    android:src="@mipmap/round_card_giftcard_white_18"
                    android:textColor="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/claro_club"
                    android:textColor="@color/black"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="15dp"
                    android:textSize="15dp" />
                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/round_arrow_forward_ios_24"
                    android:layout_marginTop="10dp"
                    />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/softGrey" />

        </LinearLayout>

    </LinearLayout>

    <View
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_weight="1"/>

    <Button
        android:id="@+id/btn_chat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/btn_round_border_grey"
        android:clickable="true"
        android:onClick="goChat"
        android:text="@string/chat"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/btn_make_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/btn_round_border"
        android:clickable="true"
        android:onClick="makeCall"
        android:text="@string/continue_call"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/button_id"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:clickable="true"
        android:onClick="exit"
        android:paddingBottom="15dp"
        android:text="@string/exit" />

</LinearLayout>